<resources>
    <string name="app_name" translatable="false">பிரார்த்தனை</string>
    <string name="categories">Select categories</string>
    <string name="title_activity_dua_detail">DuaDetailActivity</string>
    <string name="action_share_credit" translatable="false">via @பிரார்த்தனை</string>
    <string name="action_share_title" translatable="false">Share Dua</string>

    <string name="hadith_dua">Hadith Dua</string>
    <string name="quran_dua">Quran Dua</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="view_type">View Options</string>
    <string name="favourites">Favourites</string>

    <string name="about_text" translatable="false">Made for DarulHuda, Chennai.</string>

    <string name="quran_dua_favourites">Favourite Dua : Quran  </string>
    <string name="hadith_dua_favourites">Favourite Dua :Hadith </string>

    <!--     -->

    <string name="PREF_FILE_SETTINGS" translatable="false">PREF_FILE_SETTINGS</string>

    <string name="PREF_toViewBoth" translatable="false">toViewBoth</string>
    <string name="PREF_toViewArabic" translatable="false">toViewArabic</string>
    <string name="PREF_toViewTamil" translatable="false">toViewTamil</string>

    <string name="pref_category_1">Fonts size</string>
    <string name="pref_category_2">Language</string>

    <string name="pref_label_arabic">Arabic only</string>
    <string name="pref_label_tamil">Tamil only</string>
    <string name="pref_label_arabicTamil">Arabic and Tamil</string>

    <integer name="pref_font_arabic_size_default">24</integer>
    <integer name="pref_font_other_size_default">20</integer>


    <string name="pref_font_arabic_size_key" translatable="false">pref_font_arabic_size_key </string>
    <string name="pref_font_arabic_size_title">Arabic Font Size</string>
    <integer name="pref_font_arabic_size_max">30</integer>
    <integer name="pref_font_arabic_size_min">20</integer>


    <string name="pref_font_other_size_key" translatable="false">pref_font_other_size_key</string>
    <string name="pref_font_other_size_title">Translation and Reference Font Size</string>
    <integer name="pref_font_other_size_max">24</integer>
    <integer name="pref_font_other_size_min">12</integer>

    <string name="pref_lang">Select Language</string>
    <string name="pref_lang_key" translatable="false">viewLanguage</string>
    <string name="pref_category_2_dailog_title">Select Languages</string>

    <string name="pref_lang_tamil_entry">Tamil</string>
    <string name="pref_lang_english_entry">English</string>

    <string name="pref_lang_tamil_value" translatable="false">ta</string>
    <string name="pref_lang_english_value" translatable="false">en</string>
    <string name="pref_font_arabic_size">Arabic Font Size</string>


    <string name="copy_name">Darul Huda</string>
    <string name="copyright">Copyright ©</string>
    <string name="dev_name">ifelse Technologies</string>
    <string name="developed_by">Developed by</string>
    <string name="version_label">Version</string>
    <string name="version_number">1.0</string>

   <!-- <string name="about_app">அல்லாஹ்விற்கே !
        \n\nஉமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம்\n(அல்குர்ஆன் மற்றும் நபிமொழிப் பணியாளர்)
        தாருல் ஹுதா, சென்னை-1.
        \ndarulhuda.chennai@gmail.com,
        muftiomar@gmail.com
        \n+91 98401 74121,\n+91 98844 69044,\n+91 44 25247866</string>-->

    <string name="about_app">அல்லாஹ்விற்கே எல்லாப் புகழும்! முஹம்மது (ஸல்) அவர்கள் மீதும்
   அவர்களது குடும்பத்தார்,
       தோழர்கள், அவர்களைப் பின்பற்றும் நல்லோர் அனைவர் மீதும் ஸலவாத்தும் ஸலாமும் உண்டாகட்டும்.
       \n\n
        Dummy text.
       \n\nஎந்நேரமும் உங்கள் கரத்தில் இருக்கவேண்டிய இந்நூலை ஒரு செயலியாக நாங்கள் வடிவமைத்து
       உங்களுக்குத் தருவதற்கு அல்லாஹ் அருள் புரிந்தான்.\n\nபயன்பெறுங்கள், பிறருக்கு அறிமுகப்படுத்துங்கள்!
       \n\nஉமர் ஷரீஃப் இப்னு அப்துஸ் ஸலாம்\n(அல்குர்ஆன் மற்றும் நபிமொழிப் பணியாளர்)
       தாருல் ஹுதா, சென்னை-1.
       \ndarulhuda.chennai@gmail.com, muftiomar@gmail.com
       \n+91 98401 74121,\n+91 98844 69044,\n+91 44 25247866</string>

</resources>
