<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.salsabeel.dua.AboutActivity">

    <ScrollView
        android:scrollbarStyle="outsideOverlay"
        android:paddingLeft="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="16dp"
        android:paddingRight="12dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
       >

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_about_us" />
            <TextView
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/about_app"
                android:typeface="serif" />

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">
                <ImageView
                    android:id="@+id/image_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:tint="#3b5998"
                    android:src="@drawable/ic_facebook" />
                <ImageView
                    android:id="@+id/image_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_twitter"
                    android:tint="#0084b4" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_youtube"
                    android:id="@+id/image_youtube"
                    android:tint="#ff0000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="8dp">

                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/blue_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright" />
                <TextView
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/green_dark"
                    android:id="@+id/txt_copy_name"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/copy_name" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
